--- a/src/app/pages/home/components/search/search.component.html
+++ b/src/app/pages/home/components/search/search.component.html
@@ -1,6 +1,6 @@
 <section class="search-bar">
   <div class="search-input">
-    <home-input-with-icon iconName="search" type="search" placeholder="Search..."/>
+    <home-input-with-icon iconName="search" placeholder="Search..."/>
   </div>
 
   <home-button customClass="circle-btn">
