--- a/src/app/shared/input-with-icon/input-with-icon.component.html
+++ b/src/app/shared/input-with-icon/input-with-icon.component.html
@@ -4,8 +4,11 @@
   <input
     class="input"
     type={{type}}
-    placeholder={{placeholder}}
     name={{name}}
+    [value]="value"
+    placeholder={{placeholder}}
+    (input)="onInput($event)"
+    (blur)="onTouched()"
   />
 </div>
 
