--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,6 +19,6 @@
   </section>
 
   <app-dialog dialogClass="dialog-dark" [isVisible]="isVisible" (closeEvent)="onDialogClose()">
-    <home-create-task (handleCancelEvent)="onDialogClose()" />
+    <home-create-todo (handleCancelEvent)="onDialogClose()" />
   </app-dialog>
 </main>
