--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,7 @@
 <main id="home">
   <section class="container">
-    <header style="color: white; text-align: center;">header</header>
+    <app-header />
+
     <main class="main">
       <h2>Your Tasks</h2>
 
