--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,19 +1,34 @@
-<ng-container>
-  <div class="flex-column">
-    <label>Email</label>
-    <home-input-with-icon iconName="alternate_email" placeholder="Enter your Email" />
+<form [formGroup]="loginForm" (ngSubmit)="handleLogin()">
+  <h1>Sign In</h1>
+  <div class="form-container">
+    <div class="flex-column">
+      <label>Email</label>
+      <div class="input-box">
+        <home-input-with-icon formControlName="email" customClass="input-white" iconName="alternate_email"
+          placeholder="Enter your Email" />
+      </div>
+      <div class="alert" *ngIf="submitted && loginForm.invalid">
+        <div *ngIf="loginForm.get('email')?.hasError('required')">Email is required</div>
+        <div *ngIf="loginForm.get('email')?.hasError('email')">Email is invalid</div>
+      </div>
+    </div>
+
+    <div class="flex-column">
+      <label>Password</label>
+      <div class="input-box">
+        <home-input-with-icon formControlName="password" type="password" customClass="input-white" iconName="key"
+          placeholder="Enter your password" />
+      </div>
+      <div class="alert" *ngIf="submitted && loginForm.invalid">
+        <div *ngIf="loginForm.get('password')?.hasError('required')">Password is required</div>
+        <div *ngIf="loginForm.get('password')?.hasError('minlength')">Password must be at least 6 characters</div>
+      </div>
+    </div>
+
+    <home-button type="submit" customClass="auth-btn">Sign In</home-button>
+
+    <p class="p">
+      Don't have an account? <a [routerLink]="['/register']">Sign Up</a>
+    </p>
   </div>
-
-
-  <div class="flex-column">
-    <label>Password</label>
-    <home-input-with-icon iconName="key" placeholder="Enter your password" />
-  </div>
-
-  <home-button>Sign In</home-button>
-
-  <p class="p">
-    Don't have an account? <a [routerLink]="['/register']">Sign Up</a>
-  </p>
-
-</ng-container>
+</form>
