--- a/src/app/shared/button/button.component.scss
+++ b/src/app/shared/button/button.component.scss
@@ -27,3 +27,10 @@
   background-color: var(--primary-color);
   cursor: pointer;
 }
+
+.auth-btn {
+  width: 100%;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  font-size: medium;
+}
