--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -23,9 +23,10 @@
         <div *ngIf="loginForm.get('password')?.hasError('required')">Password is required</div>
         <div *ngIf="loginForm.get('password')?.hasError('minlength')">Password must be at least 6 characters</div>
       </div>
+      <div class="alert" *ngIf="errorMessage">{{ errorMessage }}</div>
     </div>
 
-    <home-button type="submit" customClass="auth-btn">Sign In</home-button>
+    <home-button type="submit" customClass="auth-btn">Sign In <span *ngIf="isLoading">...Loading</span></home-button>
 
     <p class="p">
       Don't have an account? <a [routerLink]="['/register']">Sign Up</a>
