--- a/src/app/shared/button/button.component.scss
+++ b/src/app/shared/button/button.component.scss
@@ -33,4 +33,8 @@
   padding-top: 12px;
   padding-bottom: 12px;
   font-size: medium;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
 }
